Fix header clipping by removing overflow hidden

--- a/css/layout.css
+++ b/css/layout.css
@@ -83,7 +83,7 @@
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   gap: 16px;
-  margin-top: 16px;
+  margin-top: 26px;
 }
 
 /* ----- Product Layout ----- */
